# Defect-Studio-mgr

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  README.md  premake5.lua  pyproject.toml
config/: default.yaml  ui_settings.yaml
docs/: book.toml  cpp-guidelines.md  implementation-plan.md  milesstones.md
docs/adr/: 0001-state-mutation-policy.md  ADR-003-python-as-scientific-runtime.md  ADR-007-debug-layer-and-capability-access.md  ADR-009-domain-runtime-model-and-scientific-entities.md  ADR-010-threading-and-gpu-compute-policy.md
docs/mdbook/: README.md  SUMMARY.md  api-key-classes.md  application-lifecycle.md  architecture-core.md  architecture-data-model.md  architecture-io.md  architecture-layers.md  architecture-python-bridge.md  architecture-renderer.md  architecture-system-overview.md  architecture-ui.md  architecture.md  build-and-validation.md  build-matrix.md  custom.css  event-systems-api.md  eventqueue.md  logging.md  reference.md  runtime-core.md  system-application-shell.md  system-config-manager.md  system-events.md  system-jobs.md  system-layer-stack.md  system-progress-tracker.md  test-matrix-release-dist.md  test-strategy.md
docs/project/: TODO.md  summary-session.md
docs/work/: SUMMARY.md
install/: README.md
scripts/Linux/: Build.sh  BuildAndRun.sh  BuildDocs.sh  ConfigurePreferences.sh  ExportPythonEnv.sh  GenerateProjects.sh  Run.sh  Setup.sh  TestBuildMatrix.sh  TestReleaseDistTests.sh  UpdateRepo.sh
scripts/Windows/: Build.bat  BuildAndRun.bat  BuildDocs.bat  ConfigurePreferences.bat  Run.bat  (+7 more)
src/: main.cpp
(+408 files in other folders)
