[project]
name = "defect-studio"
version = "0.1.0"
description = "Defect Studio scientific desktop tooling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]
scientific-core = [
    "numpy>=2.0",
    "ase>=3.22",
    "pymatgen>=2025.1",
    "spglib>=2.0",
    "seekpath>=2.1",
]
scientific-extended = [
    "phonopy>=2.0",
    "sumo>=2.3",
    "doped>=3.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
